tests/NormalTests/paczka1/fuzzy1/68578995.err
Error in line 9: uCtfINRAzD A745 28,5
Error in line 26: uCtfINRAzD S110 72,6
Error in line 28: 1qJ S818 30,5
Error in line 29: iOQdOpwKks A745 49,9
